Fix [MAILWEB-946] weird invisible scroll in composer dark mode

--- a/applications/mail/src/app/components/composer/composer.scss
+++ b/applications/mail/src/app/components/composer/composer.scss
@@ -294,6 +294,10 @@
     }
 }
 
+.composer .editor-squire-wrapper {
+    background: $white;
+}
+
 .editor-squire-wrapper,
 .editor-ellipsis-button-container {
     border-bottom-left-radius: $global-border-radius;
